[tool.poetry]
name = "poetry_project"
version = "0.1.0"
description = ""
authors = ["A-Prudnikova <a.prudnikova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
selene = "^1.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
